--- a/index.html
+++ b/index.html
@@ -448,11 +448,23 @@
             }
 
             nav ul {
-                flex-direction: column;
+                flex-direction: row;
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+                scrollbar-width: none;
+            }
+
+            nav ul::-webkit-scrollbar {
+                display: none;
+            }
+
+            nav ul li {
+                flex-shrink: 0;
             }
 
             nav ul li a {
-                padding: 0.8rem;
+                padding: 0.7rem 1rem;
+                font-size: 0.95rem;
             }
 
             section h2 {
